# Cachau

./: .gitignore  BENCHMARKS.md  GUIDELINES.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: _timing.py  bench_decoration.py  bench_hit_vs_recompute.py  bench_keying.py  bench_numba.py
examples/: 01_quickstart.py  02_data_workflows.py  03_observability.py  04_numba_workloads.py
src/cachau/: __init__.py  backend.py  decorator.py  dependencies.py  disk.py  durations.py  errors.py  explanation.py  fingerprint.py  flight.py  inspection.py  interprocess.py  keys.py  memory.py  policy.py  profile.py  sizes.py  stats.py  testing.py  tokens.py
tests/: test_array_token.py  test_backend.py  test_cachau_testing.py  test_cache.py  test_code_dependency.py  test_data_hashing.py  test_depends_on.py  test_disk_backend.py  test_durations.py  test_explain.py  test_fingerprint.py  test_inspect.py  test_keying.py  test_keys.py  test_max_memory.py  test_numba.py  test_numba_utils_compat.py  test_persistence.py  test_polars.py  test_process_flight.py  test_process_flight_stress.py  test_profile.py  test_single_flight.py  test_sizes.py  test_stats.py  test_ttl.py  test_verify.py
