[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cachau"
version = "0.5.0"
description = "Delightful, observable, bounded, and persistent function caching for Python data workloads."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nicolás Seijas", email = "nicoseijas@gmail.com" }]
keywords = ["cache", "caching", "memoization", "data-science", "numpy", "pandas", "numba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/nicoseijas/Cachau"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/cachau"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
